<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_currencyConverter">Currency Converter</string>
    <string name="dot"> . </string>
    <string name="n0"> 0 </string>
    <string name="n1"> 1 </string>
    <string name="n2"> 2 </string>
    <string name="n3"> 3 </string>
    <string name="n4"> 4 </string>
    <string name="n5"> 5 </string>
    <string name="n6"> 6 </string>
    <string name="n7"> 7 </string>
    <string name="n8"> 8 </string>
    <string name="n9"> 9 </string>
    <string name="equals"> = </string>
    <string name="plus"> + </string>
    <string name="minus"> - </string>
    <string name="multiply"> X </string>
    <string name="divide"> / </string>
    <string name="allClear"> AC </string>
    <string name="clear"> C </string>
    <string name="delete"> Del </string>

    <string name="currencyTitle"> Currency Converter </string>
    <string name="fromLabel"> From: </string>
    <string name="toLabel"> To: </string>
    <string name="insertionLabel"> Value to convert: </string>
    <string name="resultLabel"> Result value </string>

    <string name="loading"> Loading... </string>
</resources>