<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.Calculator.CalculatorFragment">

    <TextView
        android:id="@+id/numericExpressionText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@drawable/calculator_screen_background"
        android:fontFamily="monospace"
        android:gravity="bottom"
        android:padding="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="25dp"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:gravity="center_horizontal|fill_horizontal|center_vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical">

            <android.widget.Button

                android:id="@+id/btnAC"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button_states"
                android:elevation="10dp"
                android:text="@string/allClear"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button_states"
                android:text="@string/clear"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button_states"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/btnDevide"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button_states"
                android:text="@string/divide"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|center_horizontal|fill_horizontal|center_vertical">

            <android.widget.Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n7"
                android:textAlignment="center"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n8"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n9"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button_states"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical">

            <android.widget.Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n4"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n5"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n6"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btnMinus"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button_states"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical">

            <android.widget.Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n1"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n2"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n3"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btnPlus"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button_states"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical">

            <android.widget.Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/number_button_states"
                android:text="@string/n0"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btnDot"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:background="@drawable/number_button_states"
                android:text="@string/dot"
                android:textAlignment="center"
                android:textColor="#EBFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btnEquals"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:background="@drawable/operator_button_states"
                android:text="@string/equals"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>